# cuda-lab

./: CMakeLists.txt  README.md  cuda-lab.files  cuda-lab.includes  upd-creator-files.sh
common/: exceptions.h  helper_cuda.h
convolution2D/: CMakeLists.txt  convolution2D.cu
matrixMul/: CMakeLists.txt  matrixMul.cu
